Fix styles for not broken in some screen resolution

--- a/src/assets/css/limit-order.scss
+++ b/src/assets/css/limit-order.scss
@@ -2065,10 +2065,9 @@
 }
 
 .limit-order {
-  @include screen-min-width(medium){
-    display: flex;
-    justify-content: space-between;
-  }
+  min-width: 1200px;
+  display: flex;
+  justify-content: space-between;
 
   &__container {
     &--left {
@@ -2094,7 +2093,23 @@
     }
   }
 
-  @include screen-max-width(xxmedium) {
+  &--mobile {
+    display: block;
+    min-width: initial;
+
+    .limit-order__container {
+      width: 100%;
+    }
+
+    .limit-order-form {
+      width: 100%;
+    }
+  }
+
+  @include screen-max-width(medium){
+    display: block;
+    min-width: initial;
+
     &__container {
       width: 100%;
     }
@@ -2240,16 +2255,19 @@
   margin-top: 8px;
 
   &__text {
+    width: calc(100% - 200px);
     font-size: 16px;
   }
 
   &__button {
+    width: 180px;
     font-size: 14px;
     font-weight: 400;
     border-radius: 3px;
     color: $text-orange;
     border: solid 1px $text-orange;
-    padding: 7px 25px;
+    padding: 7px 0;
+    text-align: center;
     cursor: pointer;
     transition: all .3s;
 
@@ -2404,24 +2422,5 @@
         border-width: 0 2px 2px 0;
       }
     }
-  }
-}
-
-
-.ld-actions{
-  display:  flex;
-  justify-content: center;
-  margin-top: 20px;
-  padding-bottom: 20px;
-  a{
-    background-image: linear-gradient(178deg, #ffb046 -66%, #f52880 371%);
-    background-color: #1a1a1a;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 12px 30px;
-    border-radius: 3px;
-    color: #192029;
-    margin-left: 20px;
-    cursor: pointer;
   }
 }
